Created UI for configurator

--- a/index.html
+++ b/index.html
@@ -5,6 +5,61 @@
     </head>
     <body>
         <canvas id="scene"></canvas>
-        <div id="side-bar"><div class="side-bar-item"></div></div>
+        <div id="side-bar">
+            <br/><br/><br/><br/>
+            <br/>
+            <div class="radio-container">
+                <div class="radio-item-container">
+                    <label for="radio-family1" class="radio-text">Family1</label>
+                    <input id="radio-family1" type="radio" class="radio-button" checked/>
+                </div>
+                <br/>
+                <div class="radio-item-container">
+                    <label for="radio-family2" class="radio-text">Family2</label>
+                    <input id="radio-family2" type="radio" class="radio-button"/>
+                </div>
+                <br/>
+                <div class="radio-item-container">
+                    <label for="radio-family3" class="radio-text">Family3</label>
+                    <input id="radio-family3" type="radio" class="radio-button"/>
+                </div>
+                <br/>
+                <br/>
+            </div>
+            <div id="layout-placeholder"></div>
+            <!-- <div class="radio-container">
+                <div class="radio-item-container">
+                    <label for="radio-layout1" class="radio-text">Layout1</label>
+                    <input id="radio-layout1" type="radio" class="radio-button" checked/>
+                </div>
+                <br/>
+                <div class="radio-item-container">
+                    <label for="radio-layout2" class="radio-text">Layout2</label>
+                    <input id="radio-layout2" type="radio" class="radio-button"/>
+                </div>
+                <br/>
+                <div class="radio-item-container">
+                    <label for="radio-layout3" class="radio-text">Layout3</label>
+                    <input id="radio-layout3" type="radio" class="radio-button"/>
+                </div>
+                <br/>
+                <div class="radio-item-container">
+                    <label for="radio-layout4" class="radio-text">Layout4</label>
+                    <input id="radio-layout4" type="radio" class="radio-button"/>
+                </div>
+                <br/>
+            </div> -->
+            <div class="side-bar-item">
+                <label for="width">Width</label>
+                <input type="text" id="width" name="width"><br><br>
+                <label for="height">Height</label>
+                <input type="text" id="height" name="height"><br><br>
+                <input type="submit" id="submit" value="Submit">
+            </div>
+            <div class="side-bar-item">
+                <p>Width should be in cm between 40cm and 350cm</p>
+                <p>Height should be in cm between 200cm and 260cm</p>
+            </div>
+        </div>
     </body>
 </html>
