--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="index.css"/>
+        <script type="importmap">{ "imports": { "three": "./node_modules/three/src/Three.js" } }</script>
         <script src="index.js" type="module"></script>
     </head>
     <body>
